--- a/Pr.css
+++ b/Pr.css
@@ -1,24 +1,15 @@
-#countLabel{
-    display: block;
-    text-align: center;
-    font-size: 10em;
+body{
     font-family: Arial, Helvetica, sans-serif;
-}
-
-#btnContainer{
     text-align: center;
 }
 
-.buttons{
-    padding: 10px 20px;
-    font-size: 1.2em; /* menas 1.2 times bigger than current/default size */
-    color: white;
-    background-color: rgb(0, 171, 0);
+#myButton{
+    font-size: 3em;
+    padding: 5px 25px;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.4s ease-out;
 }
 
-.buttons:hover{
-    background-color: rgb(0, 143, 0);
+#myLabel{
+    font-size: 3em;
 }
